# webllm-chat-kernel

./: README.md  __init__.py  build.sh  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
labextension/: install.json
lite_kernel/labextension/: package.json
src/: ChatHttpKernel.ts  WebLLMChatKernel.ts  federation.ts  index.ts  kernel.ts  models.ts  shareScope.ts
webllm_chat_kernel/: __init__.py
