[project]
name = "lite-kernel"
version = "1.0.0"
description = "HTTP Chat kernel for JupyterLite with WebLLM support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = [
    "hatchling>=1.5.0",
    "jupyterlab>=4.5.0,<5",
    "hatch-jupyter-builder>=0.5",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "node_modules",
]
artifacts = ["lite_kernel/labextension"]

[tool.hatch.build.targets.wheel]
packages = ["lite_kernel"]
artifacts = ["lite_kernel/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"lite_kernel/labextension" = "share/jupyter/labextensions/lite-kernel"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["lite_kernel/labextension/package.json"]
skip-if-exists = ["lite_kernel/labextension/package.json"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["npm"]
